--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "run:android": "react-native run-android",
-    "run:ios": "react-native run-ios",
+    "run:android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "run:ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "rename": "node ./bin/rename.js",
     "deploy": "cd android && ./gradlew assembleRelease",
     "test": "node node_modules/jest/bin/jest.js --watch"
@@ -20,10 +20,11 @@
     "native-base": "2.3.7",
     "rc-animate": "2.4.4",
     "react": "16.0.0",
-    "react-native": "0.50.3",
+    "react-native": "^0.50.3",
     "react-native-action-button": "2.8.3",
     "react-native-animated-linear-gradient": "1.1.2",
     "react-native-calendar-events": "1.4.3",
+    "react-native-cli": "^2.0.1",
     "react-native-color-picker": "0.4.0",
     "react-native-color-wheel": "0.1.4",
     "react-native-dotenv": "0.1.1",
